I changed some elements in the interface.
No break in binary compatibily (no crash), but some details.


0.7.12 --> 0.7.13
-----------------
- Chapters has now language type per item, another string format, and moved to the menu part

0.7.8 --> 0.7.9
---------------
- Windows DLL C++ namespace has changed from MediaInfoLib to MediaInfoDLL

0.7.6.4 --> 0.7.7.0
-------------------
- (General) BitRate is replaced by OveralBitRate (Overal bitrate for ALL streams) (General BitRate field is DEPRECATED)
- PlayTime is replaced by Duration (PlayTime field is DEPRECATED)
- Codec is replaced by 2 fields:
 - Format is the real format string (ie "MPEG-4 Visual")
 - CodecID is the codec string filled in the container (ie "DX50")
 - CodecID/Hint is a hint for it (ie "DivX 5")
 (Codec fields are DEPRECATED)
- Interlacement field is replaced by 2 fields:
 - ScanType for "Progressive" or "Interlaced"
 - ScanOrder for "TFF" or "BFF"
 (Interlacement field is DEPRECATED)
- Chroma is replaced by Colorimetry (Chroma field is DEPRECATED)
- Video0_Delay is replaced by Video_Delay (I will try to calculate it from the corresponding video when multiple streams) (Video0_Delay0 field is DEPRECATED)
- Format_Settings_PacketBitStream is replaced by Format_Settings_MuxingMode set to "Packet Bitstream" (Format_Settings_PacketBitStream  field is DEPRECATED)

0.7.5.3 --> 0.7.5.4
-------------------
- (Video) AspectRatio --> DisplayAspectRatio (AspectRatio tag is DEPRECATED)
- (Video) PixelAspectRatio added
- AAC #defines has been splitted in ADTS and ADIF

0.7.2.1 --> 0.7.2.2
-------------------
- (General) OveralBitRate --> BitRate
- Visual --> Video (yes, I come back to the old style, Image streams are back, merging video and image was not a good idea)
- Bits/(Pixel*Frame) --> Bits-(Pixel*Frame)  (I need the special character "/" elsewhere...)

0.7.0.x --> 0.7.2.1
-------------------
- MediaInfo_Stream_Video --> MediaInfo_Stream_Visual