@@ -35,5 +35,5 @@ NetworkName;;;Y YT;;;;;Legal
 Original/NetworkName;;;Y YT;;;;;Legal
 Countries;;;Y YT;;;;;Legal
 TimeZones;;;Y YT;;;;;Legal
-EPG_Positions_Begin;;;N NI;;;;;
-EPG_Positions_End;;;N NI;;;;;
+Chapters_Pos_Begin;;;N NI;;;Used by third-party developpers to know about the begining of the chapters list, to be used by Get(Stream_Menu, x, Pos), where Pos is an Integer between Chapters_Pos_Begin and Chapters_Pos_End;;
+Chapters_Pos_End;;;N NI;;;Used by third-party developpers to know about the end of the chapters list (this position excluded);;
